--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.110.0"
+ansible = "^9.3.0"
+uvicorn = "^0.29.0"
 
 
 [build-system]
