--- a/github-deployment/playbook.yml
+++ b/github-deployment/playbook.yml
@@ -12,6 +12,9 @@
         repo: '{{ repo_folder }}'
         dest: '{{ backend_src }}'
         update: yes
+    - name: Install docker Python library
+      pip:
+        name: docker
 
     - name: Tear down existing services
       community.docker.docker_compose:
