--- a/github-deployment/playbook.yml
+++ b/github-deployment/playbook.yml
@@ -12,6 +12,12 @@
         repo: '{{ repo_folder }}'
         dest: '{{ backend_src }}'
         update: yes
+    - name: Install pip
+      become: true
+      apt:
+        name: python3-pip
+        state: present
+
     - name: Install docker Python library
       pip:
         name: docker
