--- a/github-deployment/playbook.yml
+++ b/github-deployment/playbook.yml
@@ -12,6 +12,7 @@
         repo: '{{ repo_folder }}'
         dest: '{{ project_folder }}'
         update: yes
+        force: yes
 
     - name: Tear down existing services
       community.docker.docker_compose:
