--- a/github-deployment/playbook.yml
+++ b/github-deployment/playbook.yml
@@ -17,6 +17,7 @@
       community.docker.docker_compose:
         project_src: '{{ backend_src }}'
         state: absent
+      become: true
 
     - name: Start container
       community.docker.docker_compose:
