Open port to local machine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: ./backend/Dockerfile
     volumes:
       - .:/app/backend
+    ports:
+      - '8000:8000'
     command:
       [
         'uvicorn',
