--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,8 @@ predictionguard = "^1.9.2"
 redis = "^5.0.3"
 sqlalchemy = "^2.0.28"
 pydantic-settings = "^2.2.1"
+psycopg2 = "^2.9.9"
+uuid = "^1.30"
 
 
 [build-system]
