--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-chat-engine": "^1.11.28",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-elements": "^3.4.3",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
